@@ -1,3 +1,8 @@
+2008-08-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* sound-properties-capplet.c: (create_dialog): fix warning due to
+	left-over developer code (bug #546583)
+
 2008-08-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* Makefile.am: added missing file to _SOURCES.
